clang/test/BSC/Negative/InitCheck/indexed_write_uninit_pointer/indexed_write_uninit_pointer.cbs
// RUN: %clang_cc1 -verify %s

// An indexed write `s.p[i] = v` through an uninitialized pointer-typed field
// was accepted in pure _Safe (store through a garbage pointer -> SIGSEGV),
// while the byte-identical read and the `*s.p` / `s.p->x` deref-writes were
// rejected. The init analysis checked the pointer load for a Deref-projection
// write destination but not for an Index/ConstantIndex projection. Indexing a
// real array (not a pointer) reads no pointer and stays exempt.

struct S { int *_Borrow _ArrayElem p; int q; };

_Safe void via_index(int c) {
  struct S s;
  s.q = 0;
  s.p[c] = 5; // expected-error {{use of uninitialized value: `s.p`}}
}

_Safe void via_const_index(void) {
  struct S s;
  s.q = 0;
  s.p[0] = 5; // expected-error {{use of uninitialized value: `s.p`}}
}
